NetBSD Problem Report #45744

From www@NetBSD.org  Mon Dec 26 21:01:44 2011
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 0AC6763DC73
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 26 Dec 2011 21:01:44 +0000 (UTC)
Message-Id: <20111226210143.283E763CADD@www.NetBSD.org>
Date: Mon, 26 Dec 2011 21:01:43 +0000 (UTC)
From: gnrp@komkon2.de
Reply-To: gnrp@komkon2.de
To: gnats-bugs@NetBSD.org
Subject: sbin/disklabel/main.c defines unused getopt-arguments
X-Send-Pr-Version: www-1.0

>Number:         45744
>Category:       bin
>Synopsis:       sbin/disklabel/main.c defines unused getopt-arguments
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Dec 26 21:05:00 +0000 2011
>Closed-Date:    Sun Apr 08 08:45:39 +0000 2012
>Last-Modified:  Sun Apr 08 08:45:39 +0000 2012
>Originator:     Julian Fagir
>Release:        NetBSD-current
>Organization:
>Environment:
>Description:
sbin/disklabel/main.c defines 'b:' and 's:' options that are not used.
>How-To-Repeat:
Look at sbin/disklabel/main.c line 288.
>Fix:
$ fossil diff main.c 
--- main.c
+++ main.c
@@ -283,11 +283,11 @@
        /* We must avoid doing any ioctl requests */
        Fflag = rflag = 1;
 #endif

        error = 0;
-       while ((ch = getopt(argc, argv, "ACDFINRWb:ef:ilmrs:tvw")) != -1) {
+       while ((ch = getopt(argc, argv, "ACDFINRWef:ilmrtvw")) != -1) {
                old_op = op;
                switch (ch) {
                case 'A':       /* Action all labels */
                        Aflag = 1;
                        rflag = 1;

>Release-Note:

>Audit-Trail:
From: "Erik Berls" <cyber@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45744 CVS commit: src/sbin/disklabel
Date: Sun, 8 Apr 2012 07:59:53 +0000

 Module Name:	src
 Committed By:	cyber
 Date:		Sun Apr  8 07:59:53 UTC 2012

 Modified Files:
 	src/sbin/disklabel: main.c

 Log Message:
 PR bin/45744
 from Julian Fagir
 Removing options that have had implementations removed.

 -b: removed in -r1.4
 -s: removed in -r1.2


 To generate a diff of this commit:
 cvs rdiff -u -r1.26 -r1.27 src/sbin/disklabel/main.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: cyber@NetBSD.org
State-Changed-When: Sun, 08 Apr 2012 08:45:39 +0000
State-Changed-Why:
change submitted to HEAD, no pullups necessary


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.