PR bin/45744 from Julian Fagir Removing options that have had implementations removed.

-b: removed in -r1.4
-s: removed in -r1.2